unpackaged/main/default/objects/Opportunity_Target__c/Opportunity_Target__c.object-meta.xml
<CustomObject>
    <label>Opportunity Target</label>
    <nameField>
        <displayFormat>OT-{0000000}</displayFormat>
        <label>Opportunity Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Target</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>