unpackaged/main/default/objects/Opportunity_Target__c/fields/Auto_Year__c.field-meta.xml
<CustomField>
    <fullName>Auto_Year__c</fullName>
    <formula>YEAR( Opportunity__r.CloseDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>