unpackaged/main/default/objects/Opportunity_Target__c/fields/Opportunity_Has_Changed__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Has_Changed__c</fullName>
    <formula>Opportunity__r.Margin_Calc__c  &lt;&gt;  Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checkbox is ticked if the opportunity's margin has changed since it was won</inlineHelpText>
    <label>Opportunity Has Changed</label>
    <type>Checkbox</type>
</CustomField>