unpackaged/main/default/objects/Opportunity_Target__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <inlineHelpText>Determines which quarter the opportunity falls into</inlineHelpText>
    <label>Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>