unpackaged/main/default/objects/Opportunity_Target__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <referenceTo>Employee_Target__c</referenceTo>
    <relationshipLabel>Opportunity Target</relationshipLabel>
    <relationshipName>Opportunity_Target</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>